--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
       - "3000:3000"
 
   dev:
-    image: node:22-alpine
+    image: node:25-alpine
     profiles: ["dev"]
     working_dir: /app
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "npm install && npx prisma generate && npm run dev"
     volumes:
       - .:/app
       - node_modules:/app/node_modules
@@ -34,6 +34,7 @@ services:
         condition: service_healthy
     ports:
       - "3000:3000"
+      - "5555:5555" # for prisma studio
 
   db:
     image: postgres:16-alpine
