--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.0.1",
     "@prisma/client": "^6.18.0",
     "next": "15.5.6",
     "next-auth": "^4.24.13",
