--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/third-parties": "^16.0.1",
     "@prisma/client": "^6.18.0",
+    "@vercel/blob": "^2.0.0",
     "next": "15.5.6",
     "next-auth": "^4.24.13",
     "react": "19.1.0",
