--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@prisma/client": "^6.18.0",
     "@vercel/blob": "^2.0.0",
     "file-type": "^21.1.0",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "next-auth": "^4.24.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
